feat(pec): validate professional councils
